--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="twitter:site" content="https://x.com/ultimatedigits">
     <meta name="twitter:title" content="QuillCheck Wink by Winks.fun" />
     <meta name="twitter:description" content="Evaluate any cryptocurrency token instantly on Twitter with real-time insights and metrics, right in your feed. Click anywhere to start." />    
-    <meta name="twitter:player" content="https://quill-gamma.vercel.app/">
+    <meta name="twitter:player" content="https://quill-check-wink-res1.vercel.app/">
     <meta name="twitter:player:width" content="360">
     <meta name="twitter:player:height" content="560">
     <meta name="twitter:image" content="https://res.cloudinary.com/ddyiq1oe6/image/upload/v1726578011/Screenshot_2024-09-17_182948_sfwomh.png">
